# pyxis

./: .gitignore  00-teensy.rules  Dextra_run_servers.sh  Navis_run_servers.sh  README.md  flush_FLIR.sh  image_viewer.py  run_servers.sh  screen_config_dextra  screen_config_navis
FLIR/: FPS_plot.py  Makefile  README.md  biasFrames.py  find_wavelength_channels.py  flatFrames.py
JonahCpp/: find_wavelength_channels.py  zaber_ipython.py
SkyKraft/: APB_sampler_wrapper.vhd  bitstream_2.0V  bitstream_2.0V_not_all_zeros.txt  bitstream_newboard_on_frame_boundary.txt  decode_bitstream.py  decoder.vhd  hex17.txt  read_hex.py
archive/: FineStarTrackerServer_old.cpp
archive/Camera_SDK/FLIR_SERVER/: CMakeLists.txt
archive/Camera_SDK/FLIR_SERVER/config/: defaultConfig.toml
archive/Camera_SDK/FLIR_SERVER/include/: globals.h
archive/Camera_SDK/FLIR_SERVER/src/: FLIRCamera.cpp
archive/camera_metrology/chief/: CMakeLists.txt
archive/camera_metrology/chief/config/: config.toml.example
archive/camera_metrology/chief/include/: cmd_elseif.include  help.toml  server.h
archive/camera_metrology/chief/src/toml++/: CMakeLists.txt  toml.cpp
archive/camera_metrology/chief/util/: extract_commands.py
archive/camera_metrology/imageproc/: CMakeLists.txt  README.md  conanfile.py
archive/camera_metrology/imageproc/include/: image.hpp
archive/camera_metrology/imageproc/src/: bench.cpp
archive/linux_driver/: CMakeLists.txt  conanfile.py
archive/linux_driver/include/: Commands.h  SerialPort.h
archive/linux_driver/src/: RobotDriver.cpp  RobotDriverMain.cpp  robot_server.cpp  robot_server_main.cpp
camera/: CMakeLists.txt  uninstall_QHY.sh
camera/config/: defaultFLIRConfig.toml  defaultFLIRLocalConfig.toml  defaultQHYConfig.toml  defaultQHYLocalConfig.toml
camera/include/: FLIRCamera.h  QHYCamera.h  globals.h  runFLIRCam.h  runQHYCam.h
camera/src/: FLIRCamera.cpp  FLIRcamServerFuncs.cpp  QHYCamera.cpp  QHYcamServerFuncs.cpp  globals.cpp  main.cpp  runFLIRCam.cpp  runQHYCam.cpp
camera_metrology/: calibration_with_real.ipynb  coord_sys_crude.ipynb
commander/: README.md
gsl-2.7/: Makefile  config.status  gsl-config  gsl-histogram  gsl-randist  gsl.pc  libgsl.la  libtool
gui/: ZMQ_speak  coarse_met_gui.toml  deputy_test_gui.toml  dev_setup.toml  fsm.py  gui_main.py  port_setup.toml  test_setup.toml
linux driver/: AccTest.out  AccelTestParams.txt  AccelerationTestSource.cpp  Commands.h  Compile.sh  Decode.h  ErrorCodes.h  Linear_Ramp_Deputy.cpp  RobotDriver.cpp  RobotDriver.h  SerialPort.h  (+10 more)
servers/chief_actuator_control/: CMakeLists.txt  SmarAct_teensy_controller.ino
servers/chief_actuator_control/config/: NavisAuxConfig.toml  chiefAuxConfig.toml  defaultLocalConfig.toml
servers/chief_actuator_control/firmware/sketch_apr27a/: DFRobot_INA219.cpp  DFRobot_INA219.h  MMC5883.cpp  MMC5883.h  sketch_apr27a.ino
servers/chief_actuator_control/include/: Commands.h  Decode.h  SerialPort.h  chiefAccGlobals.hpp  chiefAuxGlobals.hpp  chiefAuxGlobals2.hpp
servers/chief_actuator_control/src/: Decode.cpp  Makefile  SerialPort.cpp  chiefAccGlobals.cpp  chiefAccServerFuncs.cpp  chiefAuxGlobals.cpp  chiefAuxGlobals2.cpp  chiefAuxServerFuncs.cpp  chiefAuxServerFuncsnew.cpp  main.cpp
servers/chief_actuator_control/src/archive/: chiefAuxGlobals.cpp  chiefAuxGlobals.hpp  chiefAuxServerFuncsOld.cpp
servers/coarse_metrology/: CMakeLists.txt  CoarseMetrologyServer.cpp
servers/coarse_metrology/config/: DextraCoarseMet.toml  SinistraCoarseMet.toml  defaultLocalConfig.toml
servers/coarse_metrology/src/: CoarseMetrologyServer.cpp  Makefile
servers/coarse_star_tracker/: CMakeLists.txt  CoarseStarTrackerServer.cpp
servers/coarse_star_tracker/config/: DextraStarTracker.toml  SinistraStarTracker.toml  defaultLocalConfig.toml
servers/coarse_star_tracker/src/: CoarseStarTrackerServer.cpp  Makefile
servers/deputy_aux/: CMakeLists.txt
servers/deputy_aux/config/: DextraAuxConfig.toml  SinistraAuxConfig.toml  defaultLocalConfig.toml
servers/deputy_aux/firmware/sketch_apr27a/: DFRobot_INA219.cpp  DFRobot_INA219.h  MMC5883.cpp  sketch_apr27a.ino
servers/deputy_aux/include/: Commands.h  Decode.h  SerialPort.h  deputyAuxGlobals.hpp
servers/deputy_aux/src/: Decode.cpp  Makefile  SerialPort.cpp  deputyAuxGlobals.cpp  deputyAuxServerFuncs.cpp  deputyAuxServerFuncs_new.cpp  main.cpp
servers/deputy_aux/src/archive/: deputyAuxGlobals.cpp  deputyAuxServerFuncs.cpp
servers/fine_metrology/: CMakeLists.txt  FineMetrologyServer.cpp
servers/fine_metrology/src/: Makefile
servers/fine_star_tracker/: CMakeLists.txt  FineStarTrackerServer.cpp  mystery_1.fits
servers/fine_star_tracker/config/: NavisStarTracker.toml  defaultLocalConfig.toml  defaultLocalConfigREAL.toml
servers/fine_star_tracker/src/: FineStarTrackerServer.cpp  Makefile
servers/fine_star_tracker_test/: CMakeLists.txt  test_centroid.cpp  test_centroid_FI.cpp
servers/science_camera/: CMakeLists.txt  CMakeLists2.txt  CMakeLists_real.txt  SciCamServer.cpp  group_delay.cpp  group_delay_functions.txt  main.cpp  main.py  mat_functions.py  servo_data_plotter.py  setup.cpp  test_main.cpp  wavelength_scale.py
servers/science_camera/archive/: wavelength_scale_temp.py
servers/science_camera/config/: NavisScienceCamera.toml  P2VM_calibration.csv  defaultLocalConfig.toml
servers/science_camera/include/: group_delay.hpp  setup.hpp
servers/science_camera/src/: Makefile  SciCamServer.cpp  group_delay.cpp  setup.cpp
servers/simple_cameras/: CMakeLists.txt  SimpleFLIRCam.cpp  SimpleQHYCam.cpp
servers/simple_cameras/config/: defaultLocalConfig.toml
servers/state_machine/: CMakeLists.txt  conanfile.py  main.cpp
servers/state_machine/config/: defaultLocalConfig.toml
servers/target_server/: CMakeLists.txt  main.cpp
servers/target_server/config/: DextraTargetConfig.toml  SinistraTargetConfig.toml  defaultLocalConfig.toml
servers/target_server/src/: Makefile  main.cpp
servers/zaber_test_server/: CMakeLists.txt  ZaberActuator.cpp  main.cpp
servers/zaber_test_server/config/: DextraTargetConfig.toml  defaultLocalConfig.toml
(+832 files in other folders)
